# LLVM-course

./: .gitignore  CMakeLists.txt  README.md
GraphicalApp/: GraphicalApp.c  Snake.c  Snake.h  main.c
LLVM_IR/: Snake.ll
Scripts/: GraphicScript.py
Test/: CMakeLists.txt  RunTests.cpp  RunTests.h  Test.cpp  TestGen.bash
Test/SnakeLangTests/: GenTests.h
Test/SnakeLangTests/Answers/: 1_TestAnswer.txt
Test/SnakeLangTests/Data/: 10_TestData.sl  11_TestData.sl  1_TestData.sl  2_TestData.sl  3_TestData.sl  4_TestData.sl  5_TestData.sl  6_TestData.sl  7_TestData.sl  8_TestData.sl  9_TestData.sl
include/ASM_to_IR/: AsmReader.h
include/Frontend/: Lexems.h
include/GraphicalApp/: GraphicalApp.h  GraphicalSnake.h  Snake.h
lib/ASM_to_IR/: AsmReader.cpp  CMakeLists.txt  Snake.s  app_asm_IRgen_1.cpp  main.cpp
lib/Frontend/: CMakeLists.txt  Snake.sl  SnakeLang.lex  SnakeLang.y  llvmIR.txt  main.cpp
lib/GraphicalApp/: CMakeLists.txt  GraphicalApp.c  Snake.c  SnakeLogic.c  SnakeSimple.c  main.c
lib/IR_Gen-Interpret/: CMakeLists.txt  GenInterpretIR.cpp  OutputIR.dump
lib/LLVM_IR/: CMakeLists.txt  Snake.ll
lib/LLVM_Pass/: CMakeLists.txt  Callbacks.cpp  Snake.ll  TracePass.cpp
